[package]
name = "auto-git-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "6.1"           # File system monitoring
tokio = { version = "1.0", features = ["full"] }  # Async runtime
anyhow = "1.0"          # Error handling
serde = { version = "1.0", features = ["derive"] }  # Serialization
serde_json = "1.0"      # JSON handling
toml = "0.8"           # TOML config files
dirs = "5.0"           # Finding config directory
reqwest = { version = "0.11", features = ["json"] }  # HTTP client
