[package]
name = "pms"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Project Management System with Git integration"
repository = "https://github.com/yourusername/pms"
license = "MIT"
readme = "README.md"
keywords = ["project", "management", "git", "automation", "github"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
notify = "6.1"           
tokio = { version = "1.0", features = ["full"] }  
anyhow = "1.0"        
thiserror = "1.0"      
serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0"     
toml = "0.8"          
dirs = "5.0"           
reqwest = { version = "0.11", features = ["json"] }  
colored = "2.0"        
chrono = "0.4"        
log = "0.4"         
env_logger = "0.10"   
secrecy = "0.8"       
zeroize = "1.6"       
base64 = "0.21"     
sha2 = "0.10"      
ctrlc = "3.4"        
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"      
mockall = "0.11"     
test-log = "0.2"   
tokio-test = "0.4"    
assert_fs = "1.0"   
predicates = "3.0"   

[profile.release]
# Optimizations
lto = true            
codegen-units = 1   
opt-level = 3      
panic = 'abort'      
strip = true         

# Security features
[features]
default = ["secure-token"]
secure-token = []     
audit = []           

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }
